# JNIDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  reftest.cpp
app/src/main/cpp/abi/: CMakeLists.txt  abi.cpp  abi.h
app/src/main/cpp/reverse/: CMakeLists.txt  reverse.cpp
app/src/main/java/com/wsy/jnidemo/: CustomException.java  JNIUtil.java  MainActivity.java
app/src/main/java/com/wsy/jnidemo/test/: ReferenceTest.java  ReverseTest.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
